[tool.poetry]
name = "robotframework-libraryproxy"
version = "0.1.0"
description = ""
authors = ["Daniel Biehl <dbiehl@live.de>"]
readme = "README.md"
packages = [{ include = "robotlibraryproxy", from = "src" }]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.8.1"
robotframework = "*"


[tool.poetry.group.dev.dependencies]
robotframework = { version = "~4.1.0", allow-prereleases = false }
isort = "*"
mypy = "*"
flake8 = "*"
black = "*"
#pep8-naming = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
robotframework-browser = "*"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | out
    | playground
  )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv"
filterwarnings = "ignore:.*Using or importing the ABCs from 'collections' instead of from 'collections.abc'.*:DeprecationWarning"
testpaths = ["tests"]
junit_suite_name = "robotcode"
log_cli = true
log_cli_level = 4
log_cli_format = "%(levelname)s %(name)s: %(message)s"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
src_paths = ["robotcode", "tests"]
#skip_gitignore = true
skip = ['external']

[tool.coverage.run]
omit = ["*tests*"]
source = ["robotcode"]

[tool.mypy]
# MyPy config
# File reference here - http://mypy.readthedocs.io/en/latest/config_file.html#config-file
python_version = 3.8
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_subclassing_any = false
#ignore_missing_imports = true
exclude = ["\\.mypy_cache", "\\.venv", "build", "playground"]

[[tool.mypy.overrides]]
module = ["robot.*", "robotremoteserver.*", "debugpy.*"]
ignore_missing_imports = true
